# opensplice_dds

./: .gitignore  Makefile.am  README  configure.ac
src/abstraction/os-net/darwin/include/: os_socket.h
src/abstraction/os-net/include/: os_socket.h
src/abstraction/os/code/: os_abstract.c  os_cond.c  os_diag.c  os_heap.c  os_init.c  os_iterator.c  os_memMapFile.c  os_mutex.c  os_report.c  os_rwlock.c  os_sharedmem.c  os_signal.c  os_stdlib.c  os_thread.c  os_time.c  os_usrClock.c
src/abstraction/os/common/code/: os_diag.c  os_mutex_attr.c  os_usrClock.c
src/abstraction/os/darwin/code/: os__library.c  os__process.c  os__process.h  os__sharedmem.h  os__thread.h  os_abstract.c  os_cond.c  os_memMapFile.c  os_stdlib.c  os_stdlib_defs.c  os_time.c
src/abstraction/os/include/: os_if.h
src/abstraction/os/linux2.6/code/: os_abstract.c
src/abstraction/os/linux2.6/include/: os_abstract.h
src/abstraction/os/posix/code/: os_memMapFile.c  os_time.c
src/abstraction/pa/code/: pa_abstract.c
src/database/database/code/: q_parser.y
src/database/odlpp/code/: c_odlbase.l  c_odlparser.c
