AC_INIT(libopensplicedds, 5.4.1)

AC_PREREQ(2.61)
AM_INIT_AUTOMAKE

AM_PROG_LIBTOOL
AC_CONFIG_MACRO_DIR(m4)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_YACC
AC_PROG_LEX

# AC_CHECK_HEADERS([sys/socket.h])
# AC_CHECK_HEADERS([net/if.h],[],[],
# [#include <stdio.h>
#  #ifdef STDC_HEADERS
#  # include <stdlib.h>
#  # include <stddef.h>
#  #else
#  # ifdef HAVE_STDLIB_H
#  #  include <stdlib.h>
#  # endif
#  #endif
#  #ifdef HAVE_SYS_SOCKET_H
#  # include <sys/socket.h>
#  #endif
# ])

AC_OUTPUT(Makefile)
